--- a/style.css
+++ b/style.css
@@ -5,9 +5,9 @@
     --clr-white: #fff;
     --clr-black: #000;
     --bg-color: #8AA6A3;
-    --clr-mokepon-logo: #D90416;
-    --clr-mokepon-bg: #079DD9;
-    --clr-mokepon-bg2: #41BDD9;
+    --clr-logo: #D90416;
+    --clr-bg: #079DD9;
+    --clr-bg2: #41BDD9;
     --clr-two-section: #00E3CC;
     --clr-principal: #C6D93B;
     --clr-secondary: #6DBF1B;
