--- a/style.css
+++ b/style.css
@@ -38,15 +38,20 @@ img {
     background-position: center;
     background-repeat: no-repeat;
     object-fit: cover;
+    outline: 2px solid red;
 }
 
 main {
     width: 100%;
-    margin: 0 auto;
+    margin: 2rem auto;
+    padding: .5rem;
 }
+
 .section-main {
     width: 100%;
-    margin: 0 auto;
+    margin: 2rem auto;
+    display: flex;
+    flex-direction: column;
 }
 
 ul {
