--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ main {
     width: 100%;
     margin: 2rem auto;
     padding: .5rem;
+    outline: 1px solid #000;
 }
 
 .section-main {
@@ -65,4 +66,17 @@ a {
 p,
 span {
     letter-spacing: 0.1rem;
+}
+
+p {
+    padding: 1rem;
+    color: #333;
+    font-size: 1.6rem;
+    font-weight: 400;
+}
+
+.input-text {
+    padding: .5rem;
+    margin: 1rem 1rem;
+    width: 25rem;
 }
