--- a/style.css
+++ b/style.css
@@ -38,7 +38,6 @@ img {
     background-position: center;
     background-repeat: no-repeat;
     object-fit: cover;
-    outline: 2px solid red;
 }
 
 main {
@@ -49,10 +48,13 @@ main {
 }
 
 .section-main {
-    width: 100%;
+    width: 50%;
     margin: 2rem auto;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    padding: 1rem;
+    outline: 4px solid #333;
 }
 
 ul {
@@ -103,4 +105,8 @@ p {
 
 .btn:active {
     transform: scale(0.9);
+}
+
+.img-DOM {
+    border-radius: 1rem;
 }
