--- a/style.css
+++ b/style.css
@@ -96,6 +96,13 @@ p {
 }
 
 /* === Button === */
+.div-btn {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
 .btn {
     width: 10rem;
     padding: 1rem;
