--- a/style.css
+++ b/style.css
@@ -108,6 +108,13 @@ p {
     padding: 1rem;
     margin: 1rem;
     border-radius: 0.5rem;
+    background-color: #f2f2f2;
+    color: #333;
+}
+
+.btn:hover {
+    background-color: #333;
+    color: #f4f4f4;
 }
 
 .btn:active {
@@ -116,4 +123,8 @@ p {
 
 .img-DOM {
     border-radius: 1rem;
+}
+
+.text-input {
+    margin: 1rem auto;
 }
