--- a/public/landing/css/mediaQueeries.css
+++ b/public/landing/css/mediaQueeries.css
@@ -1,7 +1,30 @@
 /* === Mobile === */
 @media (max-width: 370px) {}
 
-@media (max-width: 575px) {}
+@media (max-width: 575px) {
+    .main-principal {
+        grid-template-columns: auto;
+        grid-template-rows: 70% 30%;
+    }
+
+    .landing__photo {
+        grid-row: 1 / 3;
+    }
+
+    .landing__background {
+        filter: saturate(0.5);
+    }
+
+    .landing__photoTitle {
+        justify-content: center;
+        align-items: center;
+    }
+
+    .landing__photoTitle--title {
+        font-size: 3rem;
+        font-weight: 700;
+    }
+}
 
 /* == Mobile Screep === */
 @media (min-width: 576px) and (max-width: 767px) {}
