--- a/public/landing/landingCSS.css
+++ b/public/landing/landingCSS.css
@@ -81,3 +81,52 @@ body {
     width: 100%;
     background-color: var(--clr-whiteOne);
 }
+
+/* === Main */
+.main-principal {
+    width: 100%;
+    height: 100vh;
+    min-height: 100vh;
+    display: grid;
+    margin: 0 auto;
+    background-color: var(--clr-whiteOne);
+}
+
+/* === Section*/
+.landing__photo {
+    width: 100%;
+    margin: 0 auto;
+}
+
+/* === Landing Background */
+.landing__background {
+    width: 100%;
+    height: 100%;
+    background-image: url("../src/assets/img/img12Mobile.jpg");
+    object-fit: contain;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+
+}
+
+/* === Logo*/
+.landing__photoLogo {
+    width: 2.5rem;
+    height: 2.5rem;
+    position: relative;
+    left: 2.5rem;
+    top: 2.5rem;
+}
+
+/* === Title*/
+.landing__photoTitle {
+    width: 100%;
+    height: 100%;
+    display: flex;
+}
+
+.landing__photoTitle--title {
+    color: var(--clr-whiteOne);
+    font-family: var(--font-family-fashion);
+}
