--- a/public/src/css/styleQueries.css
+++ b/public/src/css/styleQueries.css
@@ -2,13 +2,63 @@
 
 @media (max-width: 370px) {}
 
-@media (max-width: 575px) {}
+@media (max-width: 575px) {
+    .main-layout {
+        grid-template-rows: 1fr 1fr;
+        grid-template-columns: auto;
+        gap: 0.5rem;
+    }
+
+    .section-mainOne {
+        grid-row: 1 / 2;
+        background-image: url("../assets/img/img1Mobile.jpg");
+        background-size: cover;
+        background-position: center top;
+        background-repeat: no-repeat;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    .section-main {
+        width: 100%;
+        grid-row: 2 / 3;
+    }
+
+    .text-one {
+        font-size: 2.5rem;
+        font-weight: 500;
+        margin-bottom: 2rem;
+    }
+
+    .label-click {
+        font-size: 1.8rem;
+        font-weight: 500;
+        margin: 1rem;
+    }
+}
 
 /* == Mobile Screep === */
 @media (min-width: 575px) and (max-width: 768px) {}
 
 /* === Laptop === */
-@media (min-width: 768px) {}
+@media (min-width: 768px) {
+    .main-layout {
+        grid-template-rows: auto;
+        grid-template-columns: 1fr 1fr;
+        gap: 1rem;
+    }
+
+    .section-mainOne {
+        background-image: url("../assets/img/img2.jpg");
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+}
 
 /* === Screen === */
 @media (min-width: 1024px) {}
