--- a/public/style.css
+++ b/public/style.css
@@ -134,7 +134,7 @@ p {
 }
 
 .label-click {
-    font-size: 1.4rem;
+    font-size: 1.6rem;
     font-weight: 500;
 }
 
@@ -158,4 +158,11 @@ p {
 .main-layout {
     width: 100%;
     display: grid;
+}
+
+/* === New Add Formulary*/
+.input__error--text {
+    font-size: 1.2rem;
+    font-weight: 900;
+    color: #000;
 }
