--- a/public/src/css/styleQueries.css
+++ b/public/src/css/styleQueries.css
@@ -4,12 +4,16 @@
 
 @media (max-width: 575px) {
     .main-layout {
-        grid-template-rows: 1fr 1fr;
+        grid-template-rows: 1fr;
         grid-template-columns: auto;
         gap: 0.5rem;
     }
 
     .section-mainOne {
+        display: none;
+    }
+
+    /* .section-mainOne {
         grid-row: 1 / 2;
         background-image: url("../assets/img/img1Mobile.jpg");
         background-size: cover;
@@ -18,7 +22,7 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
-    }
+    } */
 
     .section-main {
         width: 100%;
@@ -36,6 +40,7 @@
         font-weight: 500;
         margin: 1rem;
     }
+
 }
 
 /* == Mobile Screep === */
