add new text paragraph

--- a/public/style.css
+++ b/public/style.css
@@ -142,7 +142,7 @@ p {
     text-align: center;
     margin: 2rem auto;
     font-size: 4rem;
-    color: var(--clr-dark-grain);
+    /*  color: var(--clr-dark-grain); */
     font-weight: 700;
 }
 
