--- a/public/src/css/styleQueries.css
+++ b/public/src/css/styleQueries.css
@@ -7,6 +7,13 @@
         grid-template-rows: 1fr;
         grid-template-columns: auto;
         gap: 0.5rem;
+        background-image: url("../assets/img/img1Mobile.jpg");
+        background-size: cover;
+        background-position: center top;
+        background-repeat: no-repeat;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
 
     .section-mainOne {
@@ -41,6 +48,10 @@
         margin: 1rem;
     }
 
+    .main-title {
+        color: #fff;
+    }
+
 }
 
 /* == Mobile Screep === */
@@ -62,6 +73,10 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
+    }
+
+    .main-title {
+        color: var(--clr-dark-grain);
     }
 }
 
