--- a/public/src/css/styleQueries.css
+++ b/public/src/css/styleQueries.css
@@ -83,7 +83,11 @@
 /* === Screen === */
 @media (min-width: 1024px) {}
 
-@media (min-width: 1280px) {}
+@media (min-width: 1280px) {
+    #idForm {
+        max-width: 50rem;
+    }
+}
 
 @media (min-width: 1440px) {}
 
