--- a/public/src/css/styleQueries.css
+++ b/public/src/css/styleQueries.css
@@ -12,7 +12,7 @@
         background-position: center top;
         background-repeat: no-repeat;
         width: 100%;
-        height: 100%;
+        height: 100vh;
         object-fit: cover;
     }
 
