--- a/public/style.css
+++ b/public/style.css
@@ -202,4 +202,13 @@ p {
     position: absolute;
     right: 2rem;
     bottom: 2rem;
+    z-index: 100;
+    opacity: 0;
+}
+
+.form__label {
+    font-size: 1.4rem;
+    color: #000;
+    font-weight: bold;
+    display: flex;
 }
