--- a/public/src/css/styleQueries.css
+++ b/public/src/css/styleQueries.css
@@ -7,13 +7,7 @@
         grid-template-rows: 1fr;
         grid-template-columns: auto;
         gap: 0.5rem;
-        background-image: url("../assets/img/img1Mobile.jpg");
-        background-size: cover;
-        background-position: center top;
-        background-repeat: no-repeat;
-        width: 100%;
-        height: 100vh;
-        object-fit: cover;
+        background-color: var(--clr-whiteOne);
     }
 
     .section-mainOne {
@@ -50,7 +44,7 @@
     }
 
     .main-title {
-        color: #fff;
+        color: #333;
     }
 
     /* .form__error {
