--- a/public/mobile/css/shopMediaQueries.css
+++ b/public/mobile/css/shopMediaQueries.css
@@ -19,5 +19,7 @@
          background: hsl(0deg 0% 100%);
          border-top-right-radius: 0.5rem;
          border-bottom-right-radius: 0.5rem;
+         /* transform: translateX(100%);
+         transition: all 0.3s ease-in-out; */
      }
  }
