--- a/public/mobile/css/shopMediaQueries.css
+++ b/public/mobile/css/shopMediaQueries.css
@@ -18,7 +18,7 @@
 
     .mobile-menu {
         /* position: absolute; */
-        outline: 2px solid hsl(0deg 0% 0%);
+        /*  outline: 2px solid hsl(0deg 0% 0%); */
         left: 0;
         top: 6.5rem;
         background: hsl(0deg 0% 100%);
@@ -26,6 +26,7 @@
         border-bottom-right-radius: 0.5rem;
         /* transform: translateX(100%);
          transition: all 0.3s ease-in-out; */
+        box-shadow: 1px 2px 10px #333;
     }
 }
 
