--- a/public/mobile/css/shopMediaQueries.css
+++ b/public/mobile/css/shopMediaQueries.css
@@ -28,6 +28,10 @@
          transition: all 0.3s ease-in-out; */
         box-shadow: 1px 2px 10px #333;
     }
+
+    .product-detail {
+        width: 100%;
+    }
 }
 
 /* === Tablet === */
