--- a/public/mobile/styleShop.css
+++ b/public/mobile/styleShop.css
@@ -289,6 +289,8 @@ nav {
     right: 2.4rem;
     top: 6.1rem;
     box-shadow: 1px 2px 10px #333;
+    border-bottom-right-radius: 1rem;
+    border-bottom-left-radius: 1rem;
 }
 
 .title-container {
