--- a/public/mobile/css/shopMediaQueries.css
+++ b/public/mobile/css/shopMediaQueries.css
@@ -29,8 +29,9 @@
         box-shadow: 1px 2px 10px #333;
     }
 
-    .product-detail {
-        width: 100%;
+    #idProductDetail {
+        /* width: 100%; */
+        width: 90%;
     }
 }
 
