--- a/public/mobile/css/shopMediaQueries.css
+++ b/public/mobile/css/shopMediaQueries.css
@@ -19,7 +19,7 @@
     .mobile-menu {
         /* position: absolute; */
         /*  outline: 2px solid hsl(0deg 0% 0%); */
-        left: 0;
+        /* left: 0; */
         top: 6.5rem;
         background: hsl(0deg 0% 100%);
         border-top-right-radius: 0.5rem;
@@ -27,6 +27,15 @@
         /* transform: translateX(100%);
          transition: all 0.3s ease-in-out; */
         box-shadow: 1px 2px 10px #333;
+        width: 90%;
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .mobile-menu a {
+        font-size: 1.6rem;
     }
 
     #idProductDetail {
