--- a/public/mobile/css/shopMediaQueries.css
+++ b/public/mobile/css/shopMediaQueries.css
@@ -56,6 +56,10 @@
         width: 140px;
         height: 140px;
     }
+
+    .products-details {
+        width: 100%;
+    }
 }
 
 /* === Tablet === */
