--- a/public/mobile/styleShop.css
+++ b/public/mobile/styleShop.css
@@ -414,7 +414,8 @@ nav {
 .cards-container {
     display: grid;
     grid-template-columns: repeat(auto-fill, 240px);
-    gap: 26px;
+    /* gap: 26px; */
+    gap: 2rem;
     place-content: center;
     margin: 2rem auto;
 }
@@ -458,4 +459,91 @@ nav {
     margin-top: 0;
     margin-bottom: 0;
     color: var(--very-light-pink);
+}
+
+/* === Products Details Open === */
+.products-details {
+    width: 360px;
+    padding-bottom: 24px;
+    position: absolute;
+    right: 0;
+    box-shadow: 1px 2px 15px #333;
+    padding: 0.5rem;
+    position: absolute;
+    top: 6.1rem;
+    right: 2.4rem;
+    background-color: hsl(0deg 0% 100%);
+    border-top-left-radius: 1rem;
+    border-bottom-left-radius: 1rem;
+    border-bottom-right-radius: 1rem;
+}
+
+.products-detail-closed {
+    /* background: var(--white); */
+    width: 14px;
+    height: 14px;
+    position: absolute;
+    top: 24px;
+    left: 24px;
+    z-index: 2;
+    padding: 12px;
+    border-radius: 50%;
+    background-color: #333;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.products-detail-closed:hover {
+    cursor: pointer;
+}
+
+.products-details>img:nth-child(2) {
+    width: 100%;
+    height: 360px;
+    object-fit: cover;
+    border-radius: 0 0 20px 20px;
+}
+
+.products-infos {
+    margin: 24px 24px 0 24px;
+}
+
+.products-infos p:nth-child(1) {
+    font-weight: bold;
+    font-size: var(--md);
+    margin-top: 0;
+    margin-bottom: 4px;
+}
+
+.products-infos p:nth-child(2) {
+    color: var(--very-light-pink);
+    font-size: var(--md);
+    margin-top: 0;
+    margin-bottom: 36px;
+}
+
+.products-infos p:nth-child(3) {
+    color: var(--very-light-pink);
+    font-size: var(--sm);
+    margin-top: 0;
+    margin-bottom: 36px;
+}
+
+.primary-button {
+    background-color: var(--hospital-green);
+    border-radius: 8px;
+    border: none;
+    color: var(--white);
+    width: 100%;
+    cursor: pointer;
+    font-size: var(--md);
+    font-weight: bold;
+    height: 50px;
+}
+
+.add-to-cart-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
