--- a/public/mobile/styleShop.css
+++ b/public/mobile/styleShop.css
@@ -473,15 +473,18 @@ nav {
     right: 0;
     box-shadow: 1px 2px 15px #333;
     padding: 0.5rem;
-    position: absolute;
-    top: 6.1rem;
-    right: 2.4rem;
     background-color: hsl(0deg 0% 100%);
     border-top-left-radius: 1rem;
     border-bottom-left-radius: 1rem;
     border-bottom-right-radius: 1rem;
+    position: absolute;
+    top: 6.1rem;
+    right: 2.4rem;
+    /*  position: fixed; */
+    /* z-index: 10; */
 }
 
+/* ===  Remember Add Overlay / Modal === */
 .products-detail-closed {
     /* background: var(--white); */
     width: 14px;
@@ -502,7 +505,13 @@ nav {
     cursor: pointer;
 }
 
-.products-details>img:nth-child(2) {
+/* .products-details>img:nth-child(2) {
+    width: 100%;
+    height: 360px;
+    object-fit: cover;
+    border-radius: 0 0 20px 20px;
+} */
+.img-detail {
     width: 100%;
     height: 360px;
     object-fit: cover;
